Added a property TextBoxStyle.

--- a/SimpleAutoCompleteWPFControl/TextBoxAutoComplete.xaml
+++ b/SimpleAutoCompleteWPFControl/TextBoxAutoComplete.xaml
@@ -17,6 +17,7 @@
             <DockPanel HorizontalAlignment="Stretch">
                 <TextBox x:Name="txtSearch"
                          BorderThickness="0"
+                         Style="{Binding Path=TextBoxStyle, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                          Text="{Binding Path=TextBoxContent, UpdateSourceTrigger=PropertyChanged}"
                          TextChanged="txtSearch_TextChanged"
                          LostFocus="txtSearch_LostFocus"
